package shop

import (
	"github.com/pixel-plaza-dev/uru-databases-2-protobuf-common/types/grpc"
)

// Business service gRPC methods
var (
	UpdateAdminRevision                = grpc.NewMethod("UpdateAdminRevision")
	GetAdminRevisions                  = grpc.NewMethod("GetAdminRevisions")
	CloseAdminRevision                 = grpc.NewMethod("CloseAdminRevision")
	AddBusiness                        = grpc.NewMethod("AddBusiness")
	GetBusiness                        = grpc.NewMethod("GetBusiness")
	UpdateBusiness                     = grpc.NewMethod("UpdateBusiness")
	SetBusinessProfilePicture          = grpc.NewMethod("SetBusinessProfilePicture")
	OpenAdminRevisionToBusiness        = grpc.NewMethod("OpenAdminRevisionToBusiness")
	DeleteBusiness                     = grpc.NewMethod("DeleteBusiness")
	AddBusinessOwner                   = grpc.NewMethod("AddBusinessOwner")
	RemoveBusinessOwner                = grpc.NewMethod("RemoveBusinessOwner")
	GetBusinessOwners                  = grpc.NewMethod("GetBusinessOwners")
	AddBusinessClient                  = grpc.NewMethod("AddBusinessClient")
	IsBusinessClient                   = grpc.NewMethod("IsBusinessClient")
	AddMarketCategory                  = grpc.NewMethod("AddMarketCategory")
	GetMarketCategory                  = grpc.NewMethod("GetMarketCategory")
	UpdateMarketCategory               = grpc.NewMethod("UpdateMarketCategory")
	AddBusinessMarketCategory          = grpc.NewMethod("AddBusinessMarketCategory")
	GetBusinessMarketCategories        = grpc.NewMethod("GetBusinessMarketCategories")
	AddStore                           = grpc.NewMethod("AddStore")
	GetStore                           = grpc.NewMethod("GetStore")
	DeleteStore                        = grpc.NewMethod("DeleteStore")
	GetUnoccupiedStores                = grpc.NewMethod("GetUnoccupiedStores")
	AddBranch                          = grpc.NewMethod("AddBranch")
	GetBranch                          = grpc.NewMethod("GetBranch")
	GetBusinessBranches                = grpc.NewMethod("GetBusinessBranches")
	UpdateBranch                       = grpc.NewMethod("UpdateBranch")
	CloseTemporarilyBranch             = grpc.NewMethod("CloseTemporarilyBranch")
	OpenBranch                         = grpc.NewMethod("OpenBranch")
	OpenAdminRevisionToBranch          = grpc.NewMethod("OpenAdminRevisionToBranch")
	DeleteBranch                       = grpc.NewMethod("DeleteBranch")
	AddBranchRent                      = grpc.NewMethod("AddBranchRent")
	GetBranchRents                     = grpc.NewMethod("GetBranchRents")
	UpdateBranchRent                   = grpc.NewMethod("UpdateBranchRent")
	GetUnpaidBranchRents               = grpc.NewMethod("GetUnpaidBranchRents")
	GetBusinessUnpaidBranchRents       = grpc.NewMethod("GetBusinessUnpaidBranchRents")
	AddProductCategory                 = grpc.NewMethod("AddProductCategory")
	GetProductCategory                 = grpc.NewMethod("GetProductCategory")
	UpdateProductCategory              = grpc.NewMethod("UpdateProductCategory")
	AddProduct                         = grpc.NewMethod("AddProduct")
	GetProduct                         = grpc.NewMethod("GetProduct")
	UpdateProduct                      = grpc.NewMethod("UpdateProduct")
	SearchProducts                     = grpc.NewMethod("SearchProducts")
	OpenAdminRevisionToProduct         = grpc.NewMethod("OpenAdminRevisionToProduct")
	AddBusinessProduct                 = grpc.NewMethod("AddBusinessProduct")
	GetBusinessProduct                 = grpc.NewMethod("GetBusinessProduct")
	UpdateBusinessProduct              = grpc.NewMethod("UpdateBusinessProduct")
	SearchBusinessProducts             = grpc.NewMethod("SearchBusinessProducts")
	OpenAdminRevisionToBusinessProduct = grpc.NewMethod("OpenAdminRevisionToBusinessProduct")
	AddBranchProduct                   = grpc.NewMethod("AddBranchProduct")
	GetBranchProduct                   = grpc.NewMethod("GetBranchProduct")
	SearchBranchProducts               = grpc.NewMethod("SearchBranchProducts")
	UpdateBranchProduct                = grpc.NewMethod("UpdateBranchProduct")
)
